[package]
name = "proptest-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
byteorder = "1.5.0"
paste = "1.0.15"
proptest-derive = "0.7.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
uuid = { version = "1.19.0", features = ["serde"] }
varint-rs = "2.2.0"

[dev-dependencies]
proptest = "1.9.0"
